--- a/main.html
+++ b/main.html
@@ -2,80 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bootstrap Grid Match</title>
-
-  <!-- Bootstrap 4 -->
+  <title>Bootstrap Grid Layout</title>
+  <!-- Use the Bootstrap version given in your starter code -->
   <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  >
 </head>
-
 <body>
 
 <div class="container"
-     style="width:600px; border:5px solid rgb(4,255,4); background-color:rgb(41,0,0);">
+     style="width:600px; border:5px solid rgb(4,255,4); background:rgb(41,0,0);">
 
-  <!-- ROW 1 -->
+  <!-- Row 1 -->
   <div class="row"
        style="border:5px solid rgb(255,188,188); height:200px;">
-    <div class="col-md-4 col-sm-6"
-         style="border:2px dotted rgb(38,38,43); background-color:teal;">
+    <div class="col-6 col-md-4"
+         style="border:2px dotted rgb(38,38,43); background:teal;">
       Row1 col1
     </div>
-    <div class="col-md-8 col-sm-6"
-         style="border:2px dotted rgb(38,38,43); background-color:thistle;">
+    <div class="col-6 col-md-8"
+         style="border:2px dotted rgb(38,38,43); background:thistle;">
       Row1 col2
     </div>
   </div>
 
-  <!-- ROW 2 -->
+  <!-- Row 2 -->
   <div class="row"
        style="border:5px solid rgb(255,188,188); height:200px;">
-    
-    <!-- Empty dark column -->
-    <div class="col-md-2"
-         style="background-color:rgb(41,0,0);"></div>
-
-    <div class="col-md-4"
-         style="border:2px dotted rgb(38,38,43); background-color:tomato;">
+    <div class="col-md-4 offset-md-2"
+         style="border:2px dotted rgb(38,38,43); background:tomato;">
       Row2 col1
     </div>
-
-    <!-- Empty dark column -->
-    <div class="col-md-2"
-         style="background-color:rgb(41,0,0);"></div>
-
     <div class="col-md-4"
-         style="border:2px dotted rgb(38,38,43); background-color:turquoise;">
+         style="border:2px dotted rgb(38,38,43); background:turquoise;">
       Row2 col2
     </div>
   </div>
 
-  <!-- ROW 3 -->
+  <!-- Row 3 -->
   <div class="row justify-content-center"
        style="border:5px solid rgb(255,188,188); height:200px;">
-
-    <!-- Empty dark column -->
-    <div class="col-md-2"
-         style="background-color:rgb(41,0,0);"></div>
-
-    <div class="col-md-4 col-sm-5"
-         style="border:2px dotted rgb(38,38,43); background-color:violet;">
+    <div class="col-6 col-md-4"
+         style="border:2px dotted rgb(38,38,43); background:violet;">
       Row3 col1
     </div>
-
-    <div class="col-md-4 col-sm-5"
-         style="border:2px dotted rgb(38,38,43); background-color:yellowgreen;">
+    <div class="col-6 col-md-4"
+         style="border:2px dotted rgb(38,38,43); background:yellowgreen;">
       Row3 col2
     </div>
-
-    <!-- Empty dark column -->
-    <div class="col-md-2"
-         style="background-color:rgb(41,0,0);"></div>
   </div>
 
 </div>
 
 </body>
 </html>
+
 
