--- a/main.html
+++ b/main.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bootstrap Grid Layout</title>
-  <!-- Use the Bootstrap version given in your starter code -->
+  <title>Bootstrap Grid</title>
+  <!-- Use the Bootstrap version given in your starter -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -17,24 +17,24 @@
   <!-- Row 1 -->
   <div class="row"
        style="border:5px solid rgb(255,188,188); height:200px;">
-    <div class="col-6 col-md-4"
+    <div class="r1c1 col-sm-6 col-md-4"
          style="border:2px dotted rgb(38,38,43); background:teal;">
       Row1 col1
     </div>
-    <div class="col-6 col-md-8"
+    <div class="r1c2 col-sm-6 col-md-8"
          style="border:2px dotted rgb(38,38,43); background:thistle;">
       Row1 col2
     </div>
   </div>
 
   <!-- Row 2 -->
-  <div class="row"
+  <div class="row justify-content-between"
        style="border:5px solid rgb(255,188,188); height:200px;">
-    <div class="col-md-4 offset-md-2"
+    <div class="r2c1 col-md-4 offset-md-2"
          style="border:2px dotted rgb(38,38,43); background:tomato;">
       Row2 col1
     </div>
-    <div class="col-md-4"
+    <div class="r2c2 col-md-4"
          style="border:2px dotted rgb(38,38,43); background:turquoise;">
       Row2 col2
     </div>
@@ -43,11 +43,11 @@
   <!-- Row 3 -->
   <div class="row justify-content-center"
        style="border:5px solid rgb(255,188,188); height:200px;">
-    <div class="col-6 col-md-4"
+    <div class="r3c1 col-sm-6 col-md-4"
          style="border:2px dotted rgb(38,38,43); background:violet;">
       Row3 col1
     </div>
-    <div class="col-6 col-md-4"
+    <div class="r3c2 col-sm-6 col-md-4"
          style="border:2px dotted rgb(38,38,43); background:yellowgreen;">
       Row3 col2
     </div>
@@ -57,5 +57,6 @@
 
 </body>
 </html>
+
 
 
